melhora o tratamento da imagem de capa

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -214,6 +214,10 @@
 
     .post_image {
       margin-bottom: $spacing-unit;
+
+      img {
+        width: 100%;
+      }
     }
 
     .post_footer {
