--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
   <link rel="shortcut icon" type="image/png" href="{% link assets/images/favicon.png %}" />
   <link rel="apple-touch-icon" type="image/png" href="{% link assets/images/apple-touch-icon.png %}">
   <link rel="stylesheet" type="text/css" href="{{- "/assets/css/main.css" | relative_url -}}" />
-  {% feed_meta %}
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}" />
+  <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ '/feed.json' | absolute_url }}" />
   <link rel="alternate" type="application/rss+xml" title="Pãodecast" href="https://anchor.fm/s/2acb8e44/podcast/rss" />
 </head>
