gera o <head> manualmente, sem precisar do jekyll-seo-tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{- site.lang -}}">
-  {% include head.html %}
+  {% include site/head.html %}
   <body>
     <div id="site">
       {% include_cached header.html %}
