cria o novo estilo base do cabeçalho

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="{{- site.lang -}}">
   {% include site/head.html %}
   <body>
+    {% include site/header.html %}
     <div id="site">
-      {% include_cached header.html %}
 
       <main class="content">
         <div class="wrapper">
