--- a/_includes/site/head.html
+++ b/_includes/site/head.html
@@ -10,7 +10,7 @@
   <meta name="description" content="{{ page.excerpt | strip_html | strip_newlines | normalize_whitespace | truncate: 160 | default: site.description }}" />
 
   <link rel="icon" type="image/png" href="{% link assets/favicon.png %}" />
-  <link rel="stylesheet" type="text/css" href="{{ '/assets/screen.scss' | relative_url }}" />
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/screen.css' | relative_url }}" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}" />
   <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ '/feed.json' | absolute_url }}" />
   <link rel="alternate" type="application/rss+xml" title="Pãodecast" href="https://anchor.fm/s/2acb8e44/podcast/rss" />
