--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -12,6 +12,11 @@ a {
 
 .post_content {
   font-family: var(--font-content);
+
+  b, strong {
+    text-shadow: 1px 1px 1px #fff;
+    background-color: linear-gradient( -100deg,rgba(255,250,150,0.2),rgba(255,250,150,0.8) 92%,rgba(255,250,150,0.2) )
+  }
 }
 
 p, ul, ol, dl,
