--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -1,3 +1,6 @@
+/*
+  Basic styles
+*/
 html {
   box-sizing: border-box;
 }
@@ -15,36 +18,38 @@ body {
 }
 
 body {
-  // background-color: var(--color-background);
+  background-color: var(--color-background);
   color: var(--color-text);
-  font-family: var(--base-font);
+  font-family: var(--font-base);
 }
 
 .site_header {
   background-color: var(--color-brand);
-  padding-top: 3rem;
-
-  &::after {
-    display: block;
-    content: " ";
-    width: 100%;
-    height: 32px;
-    background-position: center bottom;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1440 31.82' fill='white' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m0 .32q27.72.92 55.45 1.84 25.86.84 51.71 1.67 27.48.9 55 1.83 25.6.84 51.21 1.67c17.82.6 35.64 1.24 53.45 1.82 18.24.59 36.48 1.18 54.72 1.67 24.48.65 49 1.3 73.46 1.78q39.62.76 79.24 1.21c19.91.23 39.83.45 59.74.36q49.37-.22 98.74-.92c14.9-.22 29.7-2 44.45-4.24 14.54-2.21 29.11-4.35 43.72-6 8.84-1 17.78-1.35 26.69-1.53 30.36-.64 60.77-1.34 91.17-1.48 27-.11 54 .26 81 .93 15.8.4 31.59 1.67 47.37 2.8 17.1 1.23 34.18 2.78 51.27 4.12 25.14 2 50.28 1.15 75.43.07 26.8-1.15 53.6-2.41 80.41-3.08 22.73-.57 45.48-.63 68.22-.41 13.15.13 26.28 1.5 39.43 1.87 13.57.39 27.16 0 40.73.37 14.31.34 28.75 0 42.88 1.91 24.3 3.25 48.65 3.38 73 3.86a12.51 12.51 0 0 0 1.49-.14v19.5h-1439.98z'/%3E%3C/svg%3E");
-  }
+  padding-top: 1rem;
+  max-width: 100vw;
+  overflow: hidden;
 
   .site_title {
     font-size: 2rem;
-    font-weight: bolder;
+    font-weight: bold;
     margin-bottom: 2rem;
     text-align: center;
 
     .site_logo {
-      display: inline-block;
-      max-height: 6rem;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      max-height: 4rem;
       width: auto;
+    }
+  }
+
+  svg {
+    display: block;
+    transform: scale(1.02, 1.02);
+
+    path {
+      fill: var(--color-background);
     }
   }
 }
@@ -75,6 +80,7 @@ body {
     border-bottom: 2px solid transparent;
     transition: border 150ms linear;
     color: currentColor;
+    font-weight: 500;
 
     &:hover,
     &:focus {
