--- a/_includes/site/head.html
+++ b/_includes/site/head.html
@@ -14,6 +14,6 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}" />
   <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ '/feed.json' | absolute_url }}" />
   <link rel="alternate" type="application/rss+xml" title="Pãodecast" href="https://anchor.fm/s/2acb8e44/podcast/rss" />
-
+  <meta name="theme-color" content="#ffd32f" />
   {% include site/opengraph.html %}
 </head>
