--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -15,6 +15,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  font-size: 18px;
 }
 
 body {
@@ -89,5 +90,14 @@ body {
       border-bottom-width: 0;
     }
   }
+}
+
+.content {
+  max-width: var(--content-width);
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: calc(var(--spacing-unit) / 2);
+  padding-right: calc(var(--spacing-unit) / 2);
 }
 
