adiciona tags opengraph na mão

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,15 +12,20 @@
   {% else %}
     <title>{{- site.title }} ~ {{ site.tagline -}}</title>
   {% endif %}
-  {% seo title=false %}
-  {% unless page.image %}
-    <meta property="og:image" content="{{ 'assets/images/ogp.jpg' | absolute_url }}" />
-  {% endunless %}
 
+  <meta name="description" content="{{ page.excerpt | strip_html | strip_newlines | normalize_whitespace | truncate: 160 | default: site.description }}" />
+
+  {% if page.canonical_url %}
+    <link rel="canonical" href="{{ page.canonical_url | absolute_url }}" />
+  {% else %}
+    <link rel="canonical" href="{{ page.url | absolute_url }}" />
+  {% endif%}
   <link rel="shortcut icon" type="image/png" href="{% link assets/images/favicon.png %}" />
   <link rel="apple-touch-icon" type="image/png" href="{% link assets/images/apple-touch-icon.png %}">
-  <link rel="stylesheet" type="text/css" href="{{- "/assets/css/main.css" | relative_url -}}" />
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}" />
-  <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ '/feed.json' | absolute_url }}" />
+  <link rel="stylesheet" type="text/css" href="{{- '/assets/css/main.css' | relative_url -}}" />
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} ~ RSS" href="{{ '/feed.xml' | absolute_url }}" />
+  <link rel="alternate" type="application/json" title="{{ site.title }} ~ JSON" href="{{ '/feed.json' | absolute_url }}" />
   <link rel="alternate" type="application/rss+xml" title="Pãodecast" href="https://anchor.fm/s/2acb8e44/podcast/rss" />
+
+  {% include opengraph.html %}
 </head>
