--- a/_includes/post/comment-form.html
+++ b/_includes/post/comment-form.html
@@ -1,4 +1,4 @@
-<form action="https://comment-worker.arthrfrts.workers.dev/handle/form" method="post">
+<form action="https://comment-worker.arthrfrts.workers.dev/api/handle/form" method="post">
   <h3 class="form-title">Comentar</h3>
 
   <div class="comments-notice">
