--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,5 +22,6 @@
     </div>
 
     <script id="site-scripts" src="{% link assets/js/scripts.js %}"></script>
+    <script async data-id="101393612" src="//static.getclicky.com/js"></script>
   </body>
 </html>
