--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,5 +23,6 @@
 
     <script id="site-scripts" src="{% link assets/js/scripts.js %}"></script>
     <script async data-id="101393612" src="//static.getclicky.com/js"></script>
+    <script id="dsq-count-scr" src="//paomortadela.disqus.com/count.js" async></script>
   </body>
 </html>
