--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,5 +24,8 @@
     <script id="site-scripts" src="{% link assets/js/scripts.js %}"></script>
     <script async data-id="101393612" src="//static.getclicky.com/js"></script>
     <script id="dsq-count-scr" src="//paomortadela.disqus.com/count.js" async></script>
+    <!-- 100% privacy-first analytics -->
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
