--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,6 @@
 
     <script id="site-scripts" src="{% link assets/js/scripts.js %}"></script>
     <script id="dsq-count-scr" src="//paomortadela.disqus.com/count.js" async></script>
-    <script defer src="https://stats.arthr.dev/script.js" data-website-id="20c51d3f-0975-4339-ada2-16af58e763b4"></script>
+    <script src="https://tinylytics.app/embed/7uH4A1S5Dijoz4o8G9Uq.js" defer></script>
   </body>
 </html>
